# stm32u5_bootloader

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gcc-arm-none-eabi.cmake
Core/Src/: FreeRTOSConfig.h  adc.c  adc.h  app_freertos.c  bootloader.h  circular_buffer.c  circular_buffer.h  flash.c  flash.h  fw_header.c  gpio.c  gpio.h  i2c.c  i2c.h  main.c  main.h  message_handler.c  message_handler.h  stm32u5xx_hal_conf.h  stm32u5xx_hal_msp.c  stm32u5xx_it.c  stm32u5xx_it.h  uart.c  uart.h
